applications/prd/surveys/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: surveys-prd
  labels:
    app: surveys
    environment: production
