applications/prd/surveys/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surveys
  namespace: surveys-prd
  labels:
    app: surveys
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: surveys
  template:
    metadata:
      labels:
        app: surveys
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      volumes:
      - name: keyvault-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: surveys-keyvault-env
      containers:
      - name: surveys
        image: ghcr.io/wedigitek/we-services-surveys:rc
        imagePullPolicy: Always
        volumeMounts:
        - name: keyvault-env
          mountPath: /mnt/keyvault-env
          readOnly: true
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "256Mi"
            cpu: "25m"
          limits:
            memory: "512Mi"
            cpu: "200m"
