applications/prd/surveys/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surveys
  namespace: surveys-prd
  labels:
    app: surveys
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: surveys
